basement/06-minio/01-web3eye-minio-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
    release: web3eye-minio
  name: web3eye-minio-nodeport
  namespace: kube-system
spec:
  ports:
  - name: http
    nodePort: 32000
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: minio
    release: web3eye-minio
  type: NodePort
status:
  loadBalancer: {}
